2019-10-08 Fixed issue with show answers in Text Selection when Limited Check is used
2019-10-05 Fixed issue with MathJax in eKeyboard and Text when the first layout is not default
2019-10-02 Fixed isAttempted method in not activity mode in True False module
2019-09-27 Changed mouse and touch control scheme in Catch addon
2018-09-24 Fixed issues with scoring in multiplegap
2018-09-24 Added missing split page label
2018-09-19 Fixed issue with decimals in Math
2018-09-19 Unifed visiblity settings in preview for multiple addons
2018-09-17 Fixed issue with Audio progress bard
2018-09-17 Fixed conflict CSS of modules
2018-09-14 Removing semi word from translations labels and API calls.
2018-08-24 Fixed problem with hiding audio descriptions in Video module
2018-08-23 Added 'Enable scroll on mobile' property in Text Identification module
2018-08-17 Added show answer class for individual words in Text Coloring.
2018-08-17 Fixed Double_State_Button native navigation.
2018-08-13 Fixed Choice disable command on mobiles
2018-08-10 Added audio descriptions to the video addon
2018-08-10 Fixed displaying of < > buttons in assessments navigation bar
2018-08-07 Fixed layout change issue after quiting fullscreen mode
2018-08-06 Fixed issues with tests for page version update
2018-08-03 Fixed playing Video without controls bar
2018-08-03 Added Copy Page Settings to Page properties
2018-08-03 Changed is visible property so that it's common for all layouts
2018-07-31 Fixed PieChart's display on Desktop devices
2018-07-26 Removed reading " connected" when in Show Answer Mode in TTS
2018-07-25 Added test mode in quiz
2018-07-23 Added module sorting in editor
2018-07-20 Fixed issues with invalid model in Crossword addon
2018-07-18 Replaced Video Tutorials button with Interactive Tutorials
2018-07-18 Fixed Scrolling on a Page in TTS
2018-07-17 Added Phrase Selection Mode to Text Coloring
2018-07-17 Fixed coursor position in GridScene